# my_project

./: Makefile  pyproject.toml  ruff.toml
src/VD_games/: cli.py  main.py
src/VD_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/VD_games/games/: calc.py  engine.py  gcd.py  prime.py  progression.py
src/VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_prime.py  VD_progression.py
